--- a/dicopal/apdocc.ipynb
+++ b/dicopal/apdocc.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
+    "import altair as alt\n",
+    "import polars as pl\n",
+    "\n",
     "colors = [\n",
     "    {\n",
     "        \"name\": \"Hermosa Pink\",\n",
@@ -2004,16 +2009,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import altair as alt\n",
-    "import polars as pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for combination in range(1, 4):\n",
     "    swatch = [colors[idx] for idx in combinations[str(combination)]]\n",
     "    # swatch = [c for c in colors if c[\"index\"] in combinations[str(combination)]]\n",
@@ -2065,20 +2060,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "path = \"../dicopal.js/src/palettes.json\"\n",
-    "with open(path, \"r\") as f:\n",
+    "with open(path) as f:\n",
     "    d = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,8 +2114,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
